force-app/main/default/objects/Account/fields/CY_contribution_revenue__c.field-meta.xml
<CustomField>
    <fullName>CY_contribution_revenue__c</fullName>
    <formula>X2019_contribution_revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CY contribution revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>