force-app/main/default/objects/Account/fields/Membership_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Membership_Expiration_Date__c</fullName>
    <description>Calculated MinnPost membership expiration date, for use in automated renewal reminders.</description>
    <formula>IF(
  OR(
    SF_Record_Type__c=&quot;Organization&quot;,
    Lifetime_Donations_New__c &lt;= 0,
    OR(
      Lifetime_Donations_New__c &gt;= 10000,
      npo02__Best_Gift_Year_Total__c &gt;=5000,
      CY_contribution_revenue__c &gt;=1000, 
      CY_1_contribution_revenue__c &gt;=1000, 
      Membership_level_qualification_amount__c &gt;=1000
    ),
    Active_sustainer__c 
  ),
  NULL,
  IF(
    MONTH(npo02__LastCloseDate__c)=12,
    DATE(
      YEAR(npo02__LastCloseDate__c)+2,
      1,
      1
    ),    
    DATE(
      YEAR(npo02__LastCloseDate__c)+1,
      MONTH(npo02__LastCloseDate__c)+1,
      1
    )
  )
)</formula>
    <inlineHelpText>Calculated MinnPost membership expiration date, for use in automated renewal reminders.</inlineHelpText>
    <label>Membership Expiration Date</label>
    <type>Date</type>
</CustomField>