force-app/main/default/objects/Account/fields/Membership_level__c.field-meta.xml
<CustomField>
    <fullName>Membership_level__c</fullName>
    <description>Assigned based on the greater of &quot;contributed in past 366 days&quot; or &quot;recurring donations - annualized amount&quot;</description>
    <formula>CASE(Membership_level_number__c,
  0, &quot;Non-member&quot;, 
  1, &quot;MinnPost Bronze&quot;,
  2, &quot;MinnPost Silver&quot;,
  3, &quot;MinnPost Gold&quot;,
  &quot;MinnPost Platinum&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Assigned based on the greater of &quot;contributed in past 366 days&quot; or &quot;recurring donations - annualized amount&quot;</inlineHelpText>
    <label>Membership level</label>
    <type>Text</type>
</CustomField>