force-app/main/default/objects/Account/fields/Membership_level_number__c.field-meta.xml
<CustomField>
    <fullName>Membership_level_number__c</fullName>
    <description>Calculated based on membership level qualification amount, unless a manual override is set, in which case it is based on that value.</description>
    <formula>IF(
  AND(
    TEXT(Membership_level_Manual_override__c) &lt;&gt; &quot;&quot;,
    OR(
      TODAY() &lt;= Member_level_manual_override_exp_date__c,
      ISNULL(Member_level_manual_override_exp_date__c)
    )
  ),
  CASE(TEXT(Membership_level_Manual_override__c),
    &quot;Non-member&quot;,0,
    &quot;MinnPost Bronze&quot;,1,
    &quot;MinnPost Silver&quot;,2,
    &quot;MinnPost Gold&quot;,3,
    4
  ),
  IF(
    OR(
      Membership_level_qualification_amount__c = 0,
      SF_Record_Type__c = &quot;Organization&quot;
    ),0,
    IF( Membership_level_qualification_amount__c &lt; 60,1,
    IF( Membership_level_qualification_amount__c &lt; 120,2,
    IF( Membership_level_qualification_amount__c &lt; 240,3,4))))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated based on membership level qualification amount, unless a manual override is set, in which case it is based on that value.</inlineHelpText>
    <label>Membership level number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>