force-app/main/default/objects/Account/fields/Membership_level_qualification_amount__c.field-meta.xml
<CustomField>
    <fullName>Membership_level_qualification_amount__c</fullName>
    <formula>MAX( Contributed_in_past_366_days__c , Pledged_Value_Today__c , Recurring_donations_Annualized_value_new__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership level qualification amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>