force-app/main/default/objects/Account/fields/Recurring_donations_Annualized_value_new__c.field-meta.xml
<CustomField>
    <fullName>Recurring_donations_Annualized_value_new__c</fullName>
    <description>Calculated by Rollup Helper off of the Recurring Donations NPSP object</description>
    <inlineHelpText>Calculated by Rollup Helper off of the Recurring Donations NPSP object</inlineHelpText>
    <label>Recurring donations Annualized value new</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>