force-app/main/default/objects/Account/fields/SF_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>SF_Record_Type__c</fullName>
    <description>Returns the text label for the account&#39;s Record Type</description>
    <formula>CASE(RecordTypeId,
  &quot;012F00000013RqN&quot;,&quot;Household Account&quot;,
  &quot;012F00000013RqO&quot;,&quot;Organization&quot;,
  &quot;[unknown]&quot;
)</formula>
    <inlineHelpText>Returns the text label for the account&#39;s Record Type</inlineHelpText>
    <label>SF Record Type</label>
    <type>Text</type>
</CustomField>